    *PRINT-READABLY* is true, signal PRINT-NOT-READABLE if the string
    does not have array-element-type equal to the most general string
    type.
  * fixed bug: SET-PPRINT-DISPATCH does not immediately resolve
    function name. (thanks to Nikodemus Siivola)
  * fixed bug: compile-time format string checker failed on
    non-closed ~{.  (reported by Thomas F Burdick)
  * fixed bug: as reported by Kalle Olavi Niemitalo on #lisp IRC,
    don't warn on legal loop code involving more than one aggregate
    boolean.  (thanks to Nikodemus Siivola)
  * optimization: rearranged the expansion of various defining macros
    so that each expands into only one top-level form in a
    :LOAD-TOPLEVEL context; this appears to decrease fasl sizes by
    approximately 10%.
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** FILE-POSITION works as specified on BROADCAST-STREAMs.
    ** CAST optimizer forgot to flush argument derived type.
    ** print/read consistency on floats is now orders of magnitude
       more likely.  (thanks also to Bruno Haible for a similar report
       and discussions)
    ** removed stack cleaning in the cleanup part of UNWIND-PROTECT.

planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, it might impact TRACE. They both encapsulate functions, and
    it's not clear yet how e.g. UNPROFILE will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are using
    profiling. If you never profile anything, TRACE should continue to
    behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 
    SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.